[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://images/pause.png" type="Texture" id=2]
[ext_resource path="res://scenes/typo/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/open-sans/OpenSans-Light.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://styles/Panel.tres" type="StyleBox" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.27451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundButton" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 400
custom_constants/margin_top = 100
custom_constants/margin_left = 400
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_left = 400.0
margin_top = 100.0
margin_right = 1520.0
margin_bottom = 980.0
custom_styles/panel = ExtResource( 5 )

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer2"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1070.0
margin_bottom = 830.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Panel/MarginContainer2/VBoxContainer"]
margin_right = 1020.0
margin_bottom = 64.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Panel/MarginContainer2/VBoxContainer/CenterContainer"]
margin_left = 478.0
margin_right = 542.0
margin_bottom = 64.0
texture = ExtResource( 2 )

[node name="Text" type="Label" parent="MarginContainer/Panel/MarginContainer2/VBoxContainer"]
margin_top = 68.0
margin_right = 1020.0
margin_bottom = 724.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Le jeu est en pause"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer2/VBoxContainer"]
margin_top = 728.0
margin_right = 1020.0
margin_bottom = 780.0
custom_constants/separation = 50
alignment = 1

[node name="MenuButton" parent="MarginContainer/Panel/MarginContainer2/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 355.0
margin_top = 0.0
margin_right = 455.0
margin_bottom = 52.0
text = "Menu"

[node name="ContinueButton" parent="MarginContainer/Panel/MarginContainer2/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 505.0
margin_top = 0.0
margin_right = 664.0
margin_bottom = 52.0
text = "Continuer"

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="BackgroundButton" to="." method="_on_BackgroundButton_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer2/VBoxContainer/HBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer2/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
